--- a/index.css
+++ b/index.css
@@ -133,3 +133,84 @@ ul li{
     margin-top: 10px;   
     text-align: center;
 }
+
+#share {
+    width: 210px;
+    height: 315px;
+    border: 1px solid #ccc;
+    position: absolute;
+    top: 0px;
+    left: -211px;
+}
+
+#share h2 {
+    height: 30px;
+    line-height: 30px;
+    background: #eee;
+    padding: 0;
+    margin: 0;
+    font-size: 14px;
+    color: #666;
+    text-indent: 10px;
+}
+
+#share ul {
+    height: 254px;
+    padding: 3px 0 2px 5px;
+}
+
+#share ul li {
+    width: 96px;
+    height: 28px;
+    float: left;
+    padding: 2px;
+}
+
+#share ul li a {
+    display: block;
+    width: 95px;
+    height: 26px;
+    line-height: 26px;
+    text-decoration: none;
+    color: #666;
+    text-indent: 30px;
+}
+
+#share ul li a:hover {
+    opacity:0.7;
+    filter: alpha(opacity = 70);
+    background-color: #eee;
+    color: #06f;
+}
+
+#share .share_footer {
+    height: 26px;
+    background: #eee;
+    position: relative;
+}
+
+#share .share_footer a {
+    position: absolute;
+    top: 7px;
+    left: 130px;
+    padding: 0 0 0 13px;
+    text-decoration: none;
+    color: #666;
+}
+
+#share .share_footer a:hover {
+    color:#06f;
+    opacity:0.7;
+    filter: alpha(opacity = 70);
+}
+
+#share .share_footer span {
+    display: block;
+    width: 24px;
+    height: 88px;
+    position: absolute;
+    top: -230px;
+    left: 210px;
+    background: url(images/share.gif) no-repeat;
+    cursor: pointer;
+}
