--- a/index.css
+++ b/index.css
@@ -46,11 +46,14 @@ ul li{
     left: 0px;
     background: #FBF7E1;
     width: 100px;
-    height: 110px;
+    height: 0px;
     border: 1px solid #999;
     border-top: none;
     padding: 10px 0 0 0;
     display: none;
+    filter: alpha(opacity=0);
+    opacity: 0;
+    overflow: hidden;
 }
 #header ul li{
     height: 25px;
@@ -75,8 +78,8 @@ ul li{
     left: 0;
     background: #000;
     z-index: 9998;
-    filter: alpha(opacity=30);
-    opacity: 0.3;
+    filter: alpha(opacity=0);
+    opacity: 0;
     display: none;
 }
 
@@ -132,6 +135,69 @@ ul li{
 #login .other{
     margin-top: 10px;   
     text-align: center;
+}
+
+#nav {
+    width:465px;
+    height: 52px;
+    background: #999;
+    border-radius: 25px;
+    margin: 50px auto 0 auto;
+    position: relative;
+}
+
+#nav ul {
+    position: absolute;
+}
+
+#nav ul li {
+    width: 85px;
+    height: 52px;
+    line-height: 52px;
+    text-align: center;
+    font-weight: bold;
+    float: left;
+}
+#nav ul.white li {
+    width: 85px;
+    height: 52px;
+    line-height: 52px;
+    text-align: center;
+    font-weight: bold;
+}
+
+#nav ul.black {
+    left: 20px;
+    color:#333;
+    z-index: 1;
+}
+
+#nav ul.white {
+    width: 425px;
+    color:#fff;
+    z-index: 3;
+    left: 0px;
+}
+
+#nav ul.about {
+    left: 20px;
+    z-index: 4;
+    cursor: pointer;
+    background: #000;
+    filter: alpha(opacity=0);
+    opacity: 0;
+}
+
+#nav div.nav_bg {
+    width: 85px;
+    height: 52px;
+    background: #333;
+    border-radius: 25px;
+    position: absolute;
+    left: 20px;
+    top: 0px;
+    z-index: 2;
+    overflow: hidden;
 }
 
 #share {
