--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@ body{
     padding: 0;
     font-size: 16px;
 }
-ul,dl,dd,h2{
+ul,dl,dd,h2,p,form {
     padding: 0;
     margin: 0;
 }
@@ -144,6 +144,7 @@ ul li{
    color: #666;
    margin: 20px;
    padding-left: 10px;
+   position: relative;
 }
 
 #reg dl dd {
@@ -161,6 +162,170 @@ ul li{
     float: right;
     margin-right: 250px;
 }
+
+#reg dl dd span.info,#reg dl dd span.error,#reg dl dd span.succ {
+    display: none;
+    font-size: 12px;
+    color: #333;
+    width: 125px;
+    height: 50px;
+    padding: 0 0 0 25px;
+    position: absolute;
+}
+
+#reg dl dd span.info {
+    border-radius: 25px;
+    background: greenyellow;
+}
+
+#reg dl dd span.error {
+    border-radius: 10px;
+    background: #fc0;
+}
+
+#reg dl dd span.succ {
+    height: 20px;
+    border-radius: 30px;
+    background: #ccc;
+    color: green;
+}
+
+#reg dl dd span.info_user {
+    height: 43px;
+    line-height: 18px;
+    padding-top: 7px;
+    top:3px;
+    left:325px;
+}
+
+#reg dl dd span.error_user {
+    width: 155px;
+    height: 25px;
+    top: 3px;
+    padding-top:3px;
+    left:325px;
+}
+
+#reg dl dd span.succ_user {
+    width: 30px;
+    padding-top: 2px;
+    top:3px;
+    left:325px;
+}
+
+#reg dl dd span.info_pass {
+    height: 100px;
+    width: 220px;
+    line-height: 18px;
+    padding-top: 7px;
+    top:3px;
+    left:325px;
+    display: none;
+}
+
+#reg dl dd span.info_pass p {
+    height: 25px;
+    line-height: 25px;
+    letter-spacing:0;
+    padding-left: -10px;
+    color: #666;
+}
+
+#reg dl dd span.info_pass p strong.s {
+    color: #ccc;
+}
+
+#reg dl dd span.error_pass {
+    width: 155px;
+    height: 25px;
+    top: 45px;
+    padding-top:3px;
+    left:325px;
+}
+
+#reg dl dd span.succ_pass {
+    width: 30px;
+    padding-top: 2px;
+    top:45px;
+    left:325px;
+}
+
+#reg dl dd span.info_notpass {
+    height: 30px;
+    width: 100px;
+    line-height: 18px;
+    padding-top: 7px;
+    top:85px;
+    left:325px;
+   
+}
+
+#reg dl dd span.error_notpass {
+    width: 155px;
+    height: 25px;
+    top: 85px;
+    padding-top:3px;
+    left:325px;
+   
+}
+
+#reg dl dd span.succ_notpass {
+    width: 30px;
+    padding-top: 2px;
+    top:85px;
+    left:325px;
+}
+
+#reg dl dd span.info_ans {
+    height: 30px;
+    width: 100px;
+    line-height: 18px;
+    padding-top: 7px;
+    top:165px;
+    left:325px;
+   
+}
+
+#reg dl dd span.error_ans {
+    width: 155px;
+    height: 25px;
+    top: 165px;
+    padding-top:3px;
+    left:325px;
+   
+}
+
+#reg dl dd span.succ_ans {
+    width: 30px;
+    padding-top: 2px;
+    top:165px;
+    left:325px;
+}
+
+#reg dl dd span.info_email {
+    height: 30px;
+    width: 100px;
+    line-height: 18px;
+    padding-top: 7px;
+    top:205px;
+    left:325px;
+}
+
+#reg dl dd span.error_email {
+    width: 155px;
+    height: 25px;
+    top: 205px;
+    padding-top:3px;
+    left:325px;
+}
+
+#reg dl dd span.succ_email {
+    width: 30px;
+    padding-top: 2px;
+    top:205px;
+    left:325px; 
+}
+
 
 #reg dl dd select {
     width: 202px;
